# animeunity-downloader

./: Cargo.toml
mpv/: au.lua
src/: config.rs  dom.rs  lib.rs  main.rs  template.rs
src/http/: mod.rs
src/js/: boa.rs  mod.rs  quickjs.rs  v8.rs
