[package]
name = "audown"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[features]
default = ["v8", "ureq-native-tls"]
boa = ["dep:boa_engine"]
v8 = ["dep:mini-v8"]
ureq-native-tls = ["ureq/native-certs", "ureq/native-tls"]

[dependencies]
ureq = { version = "2.10.1", default-features = true }
urlencoding = "2.1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yml = "0.0.12"
url = "2.5.2"
anyhow = "1.0.86"
memchr = "2.7.4"
dialoguer = { version = "0.11.0", default-features = false }
directories = "5.0.1"
soup = { version = "0.5.1", default-features = false }
mini-v8 = { version = "0.4.1", optional = true }
boa_engine = { version = "0.19.0", optional = true }
nom = "7.1.3"
bitflags = "2.6.0"
