[package]
name = "audown"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[features]
default = ["boa", "curl"]
boa = ["dep:boa_engine"]
v8 = ["dep:mini-v8"]
quickjs = ["dep:quickjs_runtime", "quickjs_runtime/bellard"]
quickjs-ng = ["dep:quickjs_runtime", "quickjs_runtime/quickjs-ng"]
curl = ["dep:curl"]
ureq = ["dep:ureq"]
ureq-native-tls = ["ureq", "ureq/native-certs", "ureq/native-tls"]

[dependencies]
cfg-if = "1.0.0"
ureq = { version = "2.12.1", default-features = true, optional = true }
curl = { version = "0.4.47", optional = true }
urlencoding = "2.1.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yml = "0.0.12"
url = "2.5.4"
anyhow = "1.0.95"
memchr = "2.7.4"
dialoguer = { version = "0.11.0", default-features = false }
directories = "5.0.1"
html5ever = { version = "0.27.0" }
markup5ever_rcdom = "0.3.0"
trim-in-place = "0.1.7"
mini-v8 = { version = "0.4.1", optional = true }
boa_engine = { version = "0.20.0", optional = true }
quickjs_runtime = { version = "0.14.5", default-features = false, optional = true }
nom = "7.1.3"
bitflags = "2.6.0"
